added zero.css file which makes default styling of the Html elements none

--- a/index.html
+++ b/index.html
@@ -11,11 +11,21 @@
     />
 
     <!-- Links for custom cascading stylesheet -->
+    <link rel="stylesheet" href="/zero.css" />
+    <link rel="stylesheet" href="/shared.css" />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <header>
-      <nav></nav>
+      <div id="page-logo">
+        <a href="/index.html">Travel Goals</a>
+      </div>
+      <nav>
+        <ul>
+          <li><a href="/places.html">Destinations</a></li>
+          <li><a href=""></a>About</li>
+        </ul>
+      </nav>
     </header>
     <main>
       <section></section>
