added some more styles to the header and navigation bar of the project

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
       </div>
       <nav>
         <ul>
+          <li><a href="/about.html">About</a></li>
           <li><a href="/places.html">Destinations</a></li>
-          <li><a href=""></a>About</li>
         </ul>
       </nav>
     </header>
