--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     />
 
     <!-- Links for custom cascading stylesheet -->
-    <link rel="stylesheet" href="/zero.css" />
-    <link rel="stylesheet" href="/shared.css" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/css/zero.css" />
+    <link rel="stylesheet" href="/css/shared.css" />
+    <link rel="stylesheet" href="/css/index.css" />
   </head>
   <body>
     <header>
@@ -22,8 +22,8 @@
       </div>
       <nav>
         <ul>
-          <li><a href="/about.html">About</a></li>
-          <li><a href="/places.html">Destinations</a></li>
+          <li><a href="/html/about.html">About</a></li>
+          <li><a href="/html/places.html">Destinations</a></li>
         </ul>
       </nav>
     </header>
@@ -32,7 +32,7 @@
         <div id="hero-content">
           <h1>My Travel Page</h1>
           <p>Let's explore the world together!</p>
-          <a href="/places.html">Discover places</a>
+          <a href="/html/places.html">Discover places</a>
         </div>
       </section>
       <section id="highlights">
