modified the footer, Displayed the recent updates on about page and updated the README.md file

--- a/html/places.html
+++ b/html/places.html
@@ -177,7 +177,11 @@
     </main>
     <footer>
       <section id="courtesy">
-        <p>(c) Travel-Page Inc, Pradyumna Hegde</p>
+        <p>(c) Travel-Page Inc, <a
+          id="github-link"
+          href="https://github.com/Pradyumna-Hegde/Travel-Page"
+          >Pradyumna Hegde</a
+        ></p>
       </section>
       <ul>
         <li>
