--- a/html/about.html
+++ b/html/about.html
@@ -5,10 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Travel Page</title>
+
+    <!-- Links for custom cascading stylesheet -->
+    <link rel="stylesheet" href="/css/zero.css" />
+    <link rel="stylesheet" href="/css/shared.css" />
   </head>
   <body>
     <header>
-      <h1>about</h1>
+      <h3>This Page is under development and will be updated Soon...!</h3>
     </header>
   </body>
 </html>
