--- a/index.html
+++ b/index.html
@@ -64,7 +64,14 @@
     </main>
     <footer>
       <section id="courtesy">
-        <p>(c) Travel-Page Inc, Pradyumna Hegde</p>
+        <p>
+          (c) Travel-Page Inc,
+          <a
+            id="github-link"
+            href="https://github.com/Pradyumna-Hegde/Travel-Page"
+            >Pradyumna Hegde</a
+          >
+        </p>
       </section>
       <ul>
         <li>
